lib_LTLIBRARIES = libndpi.la

CFLAGS += -fPIC -DPIC
libndpi_la_CPPFLAGS = -I$(top_srcdir)/src/include/  -I$(top_srcdir)/src/lib/third_party/include/
libndpi_la_LDFLAGS = -version-info 1:0:0 -export-symbols $(top_srcdir)/libndpi.sym

libndpi_la_includedir = $(includedir)/libndpi-@VERSION@/libndpi

libndpi_la_include_HEADERS = ../include/ndpi_api.h \
			     ../include/linux_compat.h \
			     ../include/ndpi_define.h \
			     ../include/ndpi_main.h \
			     ../include/ndpi_protocol_ids.h \
			     ../include/ndpi_protocols.h \
			     ../include/ndpi_typedefs.h \
			     ../include/ndpi_unix.h \
			     ../include/ndpi_win32.h

libndpi_la_SOURCES = ndpi_content_match.c.inc \
		     ndpi_main.c \
		     protocols/afp.c \
		     protocols/aimini.c \
		     protocols/applejuice.c \
		     protocols/armagetron.c \
		     protocols/ayiya.c \
		     protocols/battlefield.c \
		     protocols/bgp.c \
		     protocols/bittorrent.c \
		     protocols/ciscovpn.c \
		     protocols/citrix.c \
		     protocols/collectd.c \
		     protocols/corba.c \
		     protocols/crossfire.c \
		     protocols/dcerpc.c \
		     protocols/dhcp.c \
		     protocols/dhcpv6.c \
		     protocols/directconnect.c \
		     protocols/directdownloadlink.c \
		     protocols/dns.c \
		     protocols/dofus.c \
		     protocols/dropbox.c \
		     protocols/edonkey.c \
		     protocols/fasttrack.c \
		     protocols/fiesta.c \
		     protocols/filetopia.c \
		     protocols/florensia.c \
		     protocols/ftp_control.c \
		     protocols/ftp_data.c \
		     protocols/gnutella.c \
		     protocols/gtp.c \
		     protocols/guildwars.c \
		     protocols/h323.c \
		     protocols/halflife2_and_mods.c \
		     protocols/http_activesync.c \
		     protocols/http.c \
		     protocols/iax.c \
		     protocols/icecast.c \
		     protocols/imesh.c \
		     protocols/ipp.c \
		     protocols/irc.c \
		     protocols/jabber.c \
		     protocols/kerberos.c \
		     protocols/kontiki.c \
		     protocols/ldap.c \
		     protocols/lotus_notes.c \
		     protocols/mail_imap.c \
		     protocols/mail_pop.c \
		     protocols/mail_smtp.c \
		     protocols/maplestory.c \
		     protocols/mdns.c \
		     protocols/meebo.c \
		     protocols/megaco.c \
		     protocols/mgcp.c \
		     protocols/mms.c \
		     protocols/msn.c \
		     protocols/mssql.c \
		     protocols/mysql.c \
		     protocols/netbios.c \
		     protocols/netflow.c \
		     protocols/nfs.c \
		     protocols/noe.c \
		     protocols/non_tcp_udp.c \
		     protocols/ntp.c \
		     protocols/openft.c \
		     protocols/openvpn.c \
		     protocols/oracle.c \
		     protocols/oscar.c \
		     protocols/pando.c \
		     protocols/pcanywhere.c \
		     protocols/postgres.c \
		     protocols/pplive.c \
		     protocols/ppstream.c \
		     protocols/pptp.c \
		     protocols/qq.c \
		     protocols/quake.c \
		     protocols/radius.c \
		     protocols/rdp.c \
		     protocols/redis_net.c \
		     protocols/rsync.c \
		     protocols/rtcp.c \
		     protocols/rtmp.c \
		     protocols/rtp.c \
		     protocols/rtsp.c \
		     protocols/sflow.c \
		     protocols/shoutcast.c \
		     protocols/sip.c \
		     protocols/skinny.c \
		     protocols/skype.c \
		     protocols/smb.c \
		     protocols/snmp.c \
		     protocols/socks4.c \
		     protocols/socks5.c \
		     protocols/socrates.c \
		     protocols/sopcast.c \
		     protocols/soulseek.c \
		     protocols/spotify.c \
		     protocols/ssdp.c \
		     protocols/ssh.c \
		     protocols/ssl.c \
		     protocols/stealthnet.c \
		     protocols/steam.c \
		     protocols/stun.c \
		     protocols/syslog.c \
		     protocols/tcp_udp.c \
		     protocols/tds.c \
		     protocols/teamspeak.c \
		     protocols/teamviewer.c \
		     protocols/telegram.c \
		     protocols/telnet.c \
		     protocols/tftp.c \
		     protocols/thunder.c \
		     protocols/tor.c \
		     protocols/tvants.c \
		     protocols/tvuplayer.c \
		     protocols/twitter.c \
		     protocols/usenet.c \
		     protocols/veohtv.c \
		     protocols/viber.c \
		     protocols/vhua.c \
		     protocols/vmware.c \
		     protocols/vnc.c \
		     protocols/warcraft3.c \
		     protocols/whoisdas.c \
		     protocols/winmx.c \
		     protocols/world_of_kung_fu.c \
		     protocols/world_of_warcraft.c \
		     protocols/xbox.c \
		     protocols/xdmcp.c \
		     protocols/yahoo.c \
		     protocols/zattoo.c \
		     protocols/zeromq.c \
		     third_party/include/actypes.h \
		     third_party/include/ahocorasick.h \
		     third_party/include/node.h \
		     third_party/include/sort.h \
		     third_party/src/ahocorasick.c \
		     third_party/src/node.c \
		     third_party/src/sort.c
