lib_LTLIBRARIES=libndpi.la
libndpi_la_CFLAGS = -Wall -Werror -DNDPI_LIB_COMPILATION -I$(srcdir)/third_party/include $(HYPERSCAN_CFLAGS) $(PTHREAD_CFLAGS) $(AM_CFLAGS) 
libndpi_la_LDFLAGS= $(HYPERSCAN_LIBS) $(AM_LDFLAGS)

libndpi_la_SOURCES=ndpi_main.c \
	ndpi_utils.c \
	protocols/afp.c \
	protocols/aimini.c \
	protocols/ajp.c \
	protocols/amqp.c \
	protocols/apple_push.c \
	protocols/applejuice.c \
	protocols/armagetron.c \
	protocols/ayiya.c \
	protocols/battlefield.c \
	protocols/bgp.c \
	protocols/bittorrent.c \
	protocols/bjnp.c \
	protocols/btlib.c \
	protocols/checkmk.c \
	protocols/ciscovpn.c \
	protocols/citrix.c \
	protocols/coap.c \
	protocols/collectd.c \
	protocols/corba.c \
	protocols/crossfire.c \
	protocols/csgo.c \
	protocols/dcerpc.c \
	protocols/dhcp.c \
	protocols/dhcpv6.c \
	protocols/diameter.c \
	protocols/directconnect.c \
	protocols/directdownloadlink.c \
	protocols/dns.c \
	protocols/dofus.c \
	protocols/drda.c \
	protocols/dropbox.c \
	protocols/eaq.c \
	protocols/edonkey.c \
	protocols/fasttrack.c \
	protocols/fbzero.c \
	protocols/fiesta.c \
	protocols/fix.c \
	protocols/florensia.c \
	protocols/ftp_control.c \
	protocols/ftp_data.c \
	protocols/git.c \
	protocols/gnutella.c \
	protocols/gtp.c \
	protocols/guildwars.c \
	protocols/h323.c \
	protocols/halflife2_and_mods.c \
	protocols/hangout.c \
	protocols/hep.c \
	protocols/http.c \
	protocols/http_activesync.c \
	protocols/iax.c \
	protocols/icecast.c \
	protocols/ipp.c \
	protocols/irc.c \
	protocols/jabber.c \
	protocols/kakaotalk_voice.c \
	protocols/kerberos.c \
	protocols/kontiki.c \
	protocols/ldap.c \
	protocols/line.c \
	protocols/lisp.c \
	protocols/lotus_notes.c \
	protocols/mail_imap.c \
	protocols/mail_pop.c \
	protocols/mail_smtp.c \
	protocols/maplestory.c \
	protocols/mdns_proto.c \
	protocols/megaco.c \
	protocols/memcached.c \
	protocols/mgcp.c \
	protocols/mining.c \
	protocols/modbus.c \
	protocols/mpegts.c \
	protocols/mqtt.c \
	protocols/msn.c \
	protocols/mssql_tds.c \
	protocols/mysql.c \
	protocols/nest_log_sink.c \
	protocols/netbios.c \
	protocols/netflow.c \
	protocols/nfs.c \
	protocols/nintendo.c \
	protocols/noe.c \
	protocols/non_tcp_udp.c \
	protocols/ntp.c \
	protocols/ookla.c \
	protocols/openft.c \
	protocols/openvpn.c \
	protocols/oracle.c \
	protocols/oscar.c \
	protocols/pando.c \
	protocols/pcanywhere.c \
	protocols/postgres.c \
	protocols/pplive.c \
	protocols/ppstream.c \
	protocols/pptp.c \
	protocols/qq.c \
	protocols/quic.c \
	protocols/radius.c \
	protocols/rdp.c \
	protocols/redis_net.c \
	protocols/rsync.c \
	protocols/rtcp.c \
	protocols/rtmp.c \
	protocols/rtp.c \
	protocols/rtsp.c \
	protocols/rx.c \
	protocols/sflow.c \
	protocols/shoutcast.c \
	protocols/sip.c \
	protocols/skinny.c \
	protocols/skype.c \
	protocols/smb.c \
	protocols/smpp.c \
	protocols/snmp_proto.c \
	protocols/socks45.c \
	protocols/someip.c \
	protocols/sopcast.c \
	protocols/soulseek.c \
	protocols/spotify.c \
	protocols/ssdp.c \
	protocols/ssh.c \
	protocols/ssl.c \
	protocols/starcraft.c \
	protocols/stealthnet.c \
	protocols/steam.c \
	protocols/stun.c \
	protocols/syslog.c \
	protocols/tcp_udp.c \
	protocols/teamspeak.c \
	protocols/teamviewer.c \
	protocols/telegram.c \
	protocols/telnet.c \
	protocols/teredo.c \
	protocols/tftp.c \
	protocols/thunder.c \
	protocols/tinc.c \
	protocols/tor.c \
	protocols/tvants.c \
	protocols/tvuplayer.c \
	protocols/ubntac2.c \
	protocols/upnp.c \
	protocols/usenet.c \
	protocols/vhua.c \
	protocols/viber.c \
	protocols/vmware.c \
	protocols/vnc.c \
	protocols/warcraft3.c \
	protocols/whatsapp.c \
	protocols/whoisdas.c \
	protocols/world_of_kung_fu.c \
	protocols/world_of_warcraft.c \
	protocols/xbox.c \
	protocols/xdmcp.c \
	protocols/yahoo.c \
	protocols/zattoo.c \
	protocols/zeromq.c \
	third_party/src/ahocorasick.c \
	third_party/src/ht_hash.c \
	third_party/src/libcache.c \
	third_party/src/ndpi_patricia.c \
	third_party/src/node.c \
	third_party/src/sha1-fast.c \
	third_party/src/sort.c 
